<resources>
    <string name="app_name">Academic Progress Tracker</string>
    <string name="home_menu_populate_database">Populate Database With Test Data</string>
    <string name="home_menu_clear_database">Clear Database</string>
    <string name="main_terms_label">Terms</string>
    <string name="main_number_of_terms">Number of Terms:</string>
    <string name="main_term_list_button">Term List</string>
    <string name="main_default_amount">0</string>
    <string name="main_courses_label">Courses</string>
    <string name="main_courses_in_progress_label">Courses In Progress:</string>
    <string name="main_courses_completed_label">Courses Completed:</string>
    <string name="main_courses_dropped_label">Courses Dropped:</string>
    <string name="main_courses_to_take_label">Courses to Take:</string>
    <string name="main_course_list_button">Course List</string>
    <string name="main_assessments_label">Assessments</string>
    <string name="main_assessments_pending_label">Assessments Pending:</string>
    <string name="main_assessments_passed_label">Assessments Passed:</string>
    <string name="main_assessments_failed_label">Assessments Failed:</string>
    <string name="main_assessment_list_button">Assessment List</string>
    <string name="term_list_item_title">Term Title</string>
    <string name="term_list_item_dates">Term Dates</string>
    <string name="add_term_fab">Add Term</string>
    <string name="term_detail_title">Term Title</string>
    <string name="term_detail_start_date">Start Date</string>
    <string name="term_detail_end_date">End Date</string>
    <string name="term_detail_courses_label">Courses</string>
    <string name="term_detail_add_course">Add Course</string>
    <string name="term_add_edit_title">Term Title</string>
    <string name="term_add_edit_start_date">Start Date</string>
    <string name="term_add_edit_end_date">End Date</string>
    <string name="term_add_edit_start_date_calendar">Start Date Calendar</string>
    <string name="term_add_edit_end_date_calendar">End Date Calendar</string>
    <string name="course_list_item_title">Course Title</string>
    <string name="course_list_item_dates">Course Dates</string>
    <string name="course_list_item_status">Course Status</string>
    <string name="course_list_item_mentor_name">Mentor Name</string>
    <string name="course_list_item_mentor_email">Mentor Email</string>
    <string name="add_course_fab">Add Course</string>
    <string name="course_add_edit_title">Course Title</string>
    <string name="course_add_edit_start_date">Start Date</string>
    <string name="course_add_edit_end_date">End Date</string>
    <string name="course_add_edit_start_date_calendar">Start Date Calendar</string>
    <string name="course_add_edit_end_date_calendar">End Date Calendar</string>
    <string name="course_add_edit_mentor_name">Mentor Name</string>
    <string name="course_add_edit_mentor_phone_number">Mentor Phone Number</string>
    <string name="course_add_edit_mentor_email_address">Mentor Email Address</string>
    <string name="assessment_list_title">Assessment Title</string>
    <string name="assessment_list_date">Assessment Date</string>
    <string name="assessment_list_type">Assessment Type</string>
    <string name="course_detail_title">Course Title</string>
    <string name="course_detail_start_date">Start Date</string>
    <string name="course_detail_end_date">End Date</string>
    <string name="course_detail_status">Course Status</string>
    <string name="course_detail_mentor">Mentor</string>
    <string name="course_detail_notes_button">Notes</string>
    <string name="course_detail_assessments_label">Assessments</string>
    <string name="course_detail_add_assessment_fab">Add Assessment</string>
    <string name="add_assessment_fab">Add Assessment</string>
    <string name="assessment_detail_title">Assessment Title</string>
    <string name="assessment_detail_date">Date</string>
    <string name="assessment_detail_type">Type</string>
    <string name="assessment_detail_status">Status</string>
    <string name="assessment_add_edit_title">Assessment Title</string>
    <string name="assessment_add_edit_date">Assessment Date</string>
    <string name="assessment_add_edit_date_calendar">Assessment Date Calendar</string>
    <string name="note_list_item_title">Note Title</string>
    <string name="note_list_item_description">Note Description</string>
    <string name="add_note_fab">Add Note</string>
    <string name="note_add_edit_title">Title</string>
    <string name="note_add_edit_description">Description</string>
</resources>