<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/main_term_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/home_item_background"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/main_term_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_terms_label"
                android:layout_alignParentStart="true"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/main_term_number_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_number_of_terms"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_below="@+id/main_term_label_tv"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/main_term_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:text="@string/main_default_amount"
                android:layout_below="@id/main_term_label_tv"
                android:layout_toEndOf="@+id/main_term_number_label_tv"/>

            <Button
                android:id="@+id/main_term_list_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_term_number_label_tv"
                android:layout_marginTop="16dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:text="@string/main_term_list_button" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_course_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/home_item_background"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/main_course_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_courses_label"
                android:layout_alignParentStart="true"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/main_courses_in_progress_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_courses_in_progress_label"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/main_course_label_tv" />

            <TextView
                android:id="@+id/main_courses_in_progress_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_default_amount"
                android:layout_below="@+id/main_course_label_tv"
                android:layout_toEndOf="@+id/main_courses_in_progress_label_tv"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/main_courses_completed_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_courses_completed_label"
                android:layout_marginStart="32dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/main_courses_in_progress_label_tv" />

            <TextView
                android:id="@+id/main_courses_completed_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_default_amount"
                android:layout_below="@id/main_courses_in_progress_label_tv"
                android:layout_toEndOf="@id/main_courses_completed_label_tv"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/main_courses_dropped_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_courses_dropped_label"
                android:layout_marginStart="32dp"
                android:layout_alignParentStart="true"
                android:layout_below="@id/main_courses_completed_label_tv" />

            <TextView
                android:id="@+id/main_courses_dropped_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_default_amount"
                android:layout_toEndOf="@id/main_courses_dropped_label_tv"
                android:layout_below="@id/main_courses_completed_label_tv"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/main_courses_plan_to_take_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_below="@id/main_courses_dropped_label_tv"
                android:layout_alignParentStart="true"
                android:text="@string/main_courses_to_take_label" />

            <TextView
                android:id="@+id/main_courses_plan_to_take_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_default_amount"
                android:layout_below="@id/main_courses_dropped_label_tv"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/main_courses_plan_to_take_label_tv" />

            <Button
                android:id="@+id/main_course_list_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_courses_plan_to_take_label_tv"
                android:layout_marginTop="16dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:text="@string/main_course_list_button" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_assessment_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/home_item_background"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/main_assessments_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/main_assessments_label"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/main_assessments_pending_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/main_assessments_label_tv"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:text="@string/main_assessments_pending_label" />

            <TextView
                android:id="@+id/main_assessments_pending_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_default_amount"
                android:layout_below="@+id/main_assessments_label_tv"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/main_assessments_pending_label_tv" />

            <TextView
                android:id="@+id/main_assessments_passed_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_below="@+id/main_assessments_pending_label_tv"
                android:text="@string/main_assessments_passed_label" />

            <TextView
                android:id="@+id/main_assessments_passed_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_default_amount"
                android:layout_below="@+id/main_assessments_pending_label_tv"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/main_assessments_passed_label_tv" />

            <TextView
                android:id="@+id/main_assessment_failed_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_below="@+id/main_assessments_passed_label_tv"
                android:text="@string/main_assessments_failed_label" />

            <TextView
                android:id="@+id/main_assessment_failed_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_default_amount"
                android:layout_below="@+id/main_assessments_passed_label_tv"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/main_assessment_failed_label_tv" />

            <Button
                android:id="@+id/main_assessment_list_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_assessment_failed_label_tv"
                android:layout_marginTop="16dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:text="@string/main_assessment_list_button" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>