<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CourseDetailActivity"
    android:padding="4dp">

    <TextView
        android:id="@+id/course_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_detail_title"
        android:textStyle="bold"
        android:textSize="36sp"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_start_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/course_detail_start_date"
        app:layout_constraintEnd_toStartOf="@id/course_start_tv"
        app:layout_constraintStart_toStartOf="@+id/course_title_tv"
        app:layout_constraintTop_toBottomOf="@id/course_title_tv" />

    <TextView
        android:id="@+id/course_start_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/course_title_tv"
        app:layout_constraintStart_toEndOf="@+id/course_start_label_tv"
        app:layout_constraintTop_toBottomOf="@+id/course_title_tv" />

    <TextView
        android:id="@+id/course_end_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/course_detail_end_date"
        app:layout_constraintStart_toStartOf="@+id/course_start_label_tv"
        app:layout_constraintTop_toBottomOf="@id/course_start_label_tv" />

    <TextView
        android:id="@+id/course_end_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/course_start_tv"
        app:layout_constraintTop_toBottomOf="@+id/course_start_tv" />

    <TextView
        android:id="@+id/course_status_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/course_detail_status"
        app:layout_constraintStart_toStartOf="@+id/course_end_label_tv"
        app:layout_constraintTop_toBottomOf="@+id/course_end_label_tv" />

    <TextView
        android:id="@+id/course_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/course_end_tv"
        app:layout_constraintTop_toBottomOf="@+id/course_end_tv" />

    <TextView
        android:id="@+id/mentor_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/course_detail_mentor"
        app:layout_constraintStart_toStartOf="@+id/course_status_label_tv"
        app:layout_constraintTop_toBottomOf="@+id/course_status_label_tv" />

    <TextView
        android:id="@+id/mentor_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/course_status_tv"
        app:layout_constraintTop_toBottomOf="@+id/course_status_tv" />

    <TextView
        android:id="@+id/mentor_phone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/mentor_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/mentor_name_tv" />

    <TextView
        android:id="@+id/mentor_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/mentor_phone_tv"
        app:layout_constraintTop_toBottomOf="@+id/mentor_phone_tv" />

    <Button
        android:id="@+id/note_list_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/course_detail_notes_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentor_email_tv" />

    <View
        android:id="@+id/line_break"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_list_button" />

    <TextView
        android:id="@+id/course_assessments_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_detail_assessments_label"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_break" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cd_assessment_list_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/course_assessments_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/assessment_list_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cd_add_assessment_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/course_detail_add_assessment_fab" />

</androidx.constraintlayout.widget.ConstraintLayout>